objects/Test_Script__c.object
<CustomObject>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <label>Comments / Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Run_Verdict__c</fullName>
        <label>Last Run Verdict</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Run</fullName>
                    <default>true</default>
                    <label>Not Run</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_to_be_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the test steps are out of date, obsolete, or does not match the implementation</description>
        <label>Needs to be Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POST_CONDITIONS__c</fullName>
        <label>POST CONDITIONS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PRE_CONDITIONS__c</fullName>
        <label>PRE-CONDITIONS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User Story</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEST_STEPS__c</fullName>
        <label>TEST STEPS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Priority__c</fullName>
        <label>Test Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Normal</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
                <value>
                    <fullName>5 - Nice to Have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script_Description__c</fullName>
        <label>Test Script Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Script_Name__c</fullName>
        <description>Name of Test Script</description>
        <label>Test Script Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Script_Type__c</fullName>
        <label>Test Script Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>Agustin_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Related_User_Story__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Agustin</value>
        </filters>
        <label>Agustin Test Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germans_Tests</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>German</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Oscar</value>
        </filters>
        <label>Oscar Tests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MHD_Tests</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Lozada</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Llado</value>
        </filters>
        <label>MHD Tests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Monica_Tests</fullName>
        <columns>NAME</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Monica</value>
        </filters>
        <label>Monica Tests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Srinivas_Tests</fullName>
        <columns>NAME</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Srinivas</value>
        </filters>
        <label>Srinivas Tests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Umesh_Tests</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Umesh</value>
        </filters>
        <label>Umesh Tests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TEST-{0000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>